crates/nsl-codegen/tests/snapshots/snapshot_tests__fusion_graph_transformer_block.snap
---
source: crates/nsl-codegen/tests/snapshot_tests.rs
expression: desc
---
input: op=Input, inputs=[], consumers=[matmul], output=false
matmul: op=Matmul, inputs=[input], consumers=[bias_add], output=false
bias_add: op=Elementwise("add"), inputs=[matmul], consumers=[gelu], output=false
gelu: op=Elementwise("gelu"), inputs=[bias_add], consumers=[layernorm], output=false
layernorm: op=Reduction("layernorm"), inputs=[gelu], consumers=[], output=true
