crates/nsl-codegen/tests/snapshots/snapshot_tests__kernel_block_index_builtins.snap
---
source: crates/nsl-codegen/tests/snapshot_tests.rs
expression: ptx_str
---
.version 7.0
.target sm_70
.address_size 64

.visible .entry idx(.param .u64 param_out) {
    .reg .u32 %r<6>;
    .reg .u64 %rd<2>;
    .reg .f32 %f<1>;
    .reg .pred %p<3>;
    .reg .u32 %gid0;
    .reg .u32 %gid1;

    ld.param.u64 %rd0, [param_out];

BB0:
    mov.u32 %gid0, %ctaid.x;
    mov.u32 %gid1, %ntid.x;
    mul.lo.u32 %gid0, %gid0, %gid1;
    mov.u32 %r0, %tid.x;
    add.u32 %r0, %gid0, %r0;
    mov.u32 %gid0, %ctaid.y;
    mov.u32 %gid1, %ntid.y;
    mul.lo.u32 %gid0, %gid0, %gid1;
    mov.u32 %r1, %tid.y;
    add.u32 %r1, %gid0, %r1;
    mov.u32 %r2, %ctaid.x;
    mov.u32 %r3, %ntid.x;
    mov.u32 %r4, 2;
    rem.u32 %r5, %r0, %r4;
    mov.u32 %r4, 0;
    setp.eq.u32 %p0, %r5, %r4;
    mov.u32 %r4, 4;
    setp.lt.u32 %p1, %r1, %r4;
    and.pred %p2, %p0, %p1;
    @%p2 bra BB2;
    bra BB3;
BB1:
    bar.sync 0;
    mov.u32 %r4, 0;
    ret;
BB2:
    mul.lo.u32 %r4, %r1, %r3;
    add.u32 %r1, %r0, %r4;
    add.u32 %r0, %r1, %r2;
    cvt.u64.u32 %rd1, %r0;
    mul.lo.u64 %rd1, %rd1, 4;
    add.u64 %rd1, %rd0, %rd1;
    mov.f32 %f0, 0f3F800000;
    st.global.f32 [%rd1], %f0;
    bra BB1;
BB3:
    bra BB1;
}
