crates/nsl-codegen/tests/snapshots/snapshot_tests__kernel_block_vec_add.snap
---
source: crates/nsl-codegen/tests/snapshot_tests.rs
expression: ptx_str
---
.version 7.0
.target sm_70
.address_size 64

.visible .entry vec_add(.param .u64 param_a, .param .u64 param_b, .param .u64 param_c) {
    .reg .u32 %r<1>;
    .reg .u64 %rd<4>;
    .reg .f32 %f<3>;
    .reg .u32 %gid0;
    .reg .u32 %gid1;

    ld.param.u64 %rd0, [param_a];
    ld.param.u64 %rd1, [param_b];
    ld.param.u64 %rd2, [param_c];

BB0:
    mov.u32 %gid0, %ctaid.x;
    mov.u32 %gid1, %ntid.x;
    mul.lo.u32 %gid0, %gid0, %gid1;
    mov.u32 %r0, %tid.x;
    add.u32 %r0, %gid0, %r0;
    cvt.u64.u32 %rd3, %r0;
    mul.lo.u64 %rd3, %rd3, 4;
    add.u64 %rd3, %rd2, %rd3;
    cvt.u64.u32 %rd2, %r0;
    mul.lo.u64 %rd2, %rd2, 4;
    add.u64 %rd2, %rd0, %rd2;
    ld.global.f32 %f0, [%rd2];
    cvt.u64.u32 %rd0, %r0;
    mul.lo.u64 %rd0, %rd0, 4;
    add.u64 %rd0, %rd1, %rd0;
    ld.global.f32 %f1, [%rd0];
    add.f32 %f2, %f0, %f1;
    st.global.f32 [%rd3], %f2;
    ret;
}
