crates/nsl-codegen/tests/snapshots/snapshot_tests__kir_barrier_kernel_ptx.snap
---
source: crates/nsl-codegen/tests/snapshot_tests.rs
expression: ptx_str
---
.version 7.0
.target sm_70
.address_size 64

.shared .align 4 .b8 shared_mem[1024];

.visible .entry barrier_kernel(.param .u64 param_data) {
    .reg .u64 %rd<1>;

    ld.param.u64 %rd0, [param_data];

BB0:
    bar.sync 0;
    ret;
}
