crates/nsl-codegen/tests/snapshots/snapshot_tests__kir_unary_math_ptx.snap
---
source: crates/nsl-codegen/tests/snapshot_tests.rs
expression: ptx_str
---
.version 7.0
.target sm_70
.address_size 64

.visible .entry unary_math_kernel(.param .u64 param_x, .param .u64 param_out) {
    .reg .u32 %r<1>;
    .reg .u64 %rd<3>;
    .reg .f32 %f<2>;
    .reg .u32 %gid0;
    .reg .u32 %gid1;

    ld.param.u64 %rd0, [param_x];
    ld.param.u64 %rd1, [param_out];

BB0:
    mov.u32 %gid0, %ctaid.x;
    mov.u32 %gid1, %ntid.x;
    mul.lo.u32 %gid0, %gid0, %gid1;
    mov.u32 %r0, %tid.x;
    add.u32 %r0, %gid0, %r0;
    cvt.u64.u32 %rd2, %r0;
    mul.lo.u64 %rd2, %rd2, 4;
    add.u64 %rd2, %rd0, %rd2;
    ld.global.f32 %f0, [%rd2];
    mul.f32 %f1, %f0, 0f3FB8AA3B;
    ex2.approx.f32 %f1, %f1;
    lg2.approx.f32 %f0, %f1;
    mul.f32 %f0, %f0, 0f3F317218;
    add.f32 %f1, %f0, %f0;
    neg.f32 %f1, %f1;
    mul.f32 %f1, %f1, 0f3FB8AA3B;
    ex2.approx.f32 %f1, %f1;
    add.f32 %f1, %f1, 0f3F800000;
    rcp.approx.f32 %f1, %f1;
    add.f32 %f1, %f1, %f1;
    sub.f32 %f1, %f1, 0f3F800000;
    cvt.u64.u32 %rd0, %r0;
    mul.lo.u64 %rd0, %rd0, 4;
    add.u64 %rd0, %rd1, %rd0;
    st.global.f32 [%rd0], %f1;
    ret;
}
